Migrated Java 8 code to Java 17 syntax improvements. (#696)