@@ -1,6 +1,6 @@
 package net.datafaker.providers.base;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class DogTest extends BaseFakerTest<BaseFaker> {
@@ -8,7 +8,7 @@ class DogTest extends BaseFakerTest<BaseFaker> {
     @Override
     protected Collection<TestSpec> providerListTest() {
         Dog dog = faker.dog();
-        return Arrays.asList(TestSpec.of(dog::name, "creature.dog.name"),
+        return List.of(TestSpec.of(dog::name, "creature.dog.name"),
             TestSpec.of(dog::breed, "creature.dog.breed"),
             TestSpec.of(dog::sound, "creature.dog.sound"),
             TestSpec.of(dog::memePhrase, "creature.dog.meme_phrase"),
