@@ -1,6 +1,6 @@
 package net.datafaker.providers.base;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class ElectricalComponentsTest extends BaseFakerTest<BaseFaker> {
@@ -8,7 +8,7 @@ class ElectricalComponentsTest extends BaseFakerTest<BaseFaker> {
     @Override
     protected Collection<TestSpec> providerListTest() {
         ElectricalComponents electricalComponents = faker.electricalComponents();
-        return Arrays.asList(TestSpec.of(electricalComponents::active, "electrical_components.active"),
+        return List.of(TestSpec.of(electricalComponents::active, "electrical_components.active"),
             TestSpec.of(electricalComponents::passive, "electrical_components.passive"),
             TestSpec.of(electricalComponents::electromechanical, "electrical_components.electromechanical"));
     }
