@@ -1,7 +1,7 @@
 package net.datafaker.providers.base;
 
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 public class GarmentSizeTest extends BaseFakerTest<BaseFaker> {
@@ -9,7 +9,7 @@ public class GarmentSizeTest extends BaseFakerTest<BaseFaker> {
     @Override
     protected Collection<TestSpec> providerListTest() {
         GarmentSize garmetSize = faker.garmentSize();
-        return Arrays.asList(TestSpec.of(garmetSize::size, "garments_sizes.sizes"));
+        return List.of(TestSpec.of(garmetSize::size, "garments_sizes.sizes"));
     }
 
 }
