@@ -1,6 +1,6 @@
 package net.datafaker.providers.base;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class HipsterTest extends BaseFakerTest<BaseFaker> {
@@ -8,6 +8,6 @@ class HipsterTest extends BaseFakerTest<BaseFaker> {
     @Override
     protected Collection<TestSpec> providerListTest() {
         Hipster hipster = faker.hipster();
-        return Arrays.asList(TestSpec.of(hipster::word, "hipster.words", "^([\\w-+&']+ ?)+$"));
+        return List.of(TestSpec.of(hipster::word, "hipster.words", "^([\\w-+&']+ ?)+$"));
     }
 }
