@@ -1,6 +1,6 @@
 package net.datafaker.providers.base;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class HouseTest extends BaseFakerTest<BaseFaker> {
@@ -8,7 +8,7 @@ class HouseTest extends BaseFakerTest<BaseFaker> {
     @Override
     protected Collection<TestSpec> providerListTest() {
         House house = faker.house();
-        return Arrays.asList(TestSpec.of(house::furniture, "house.furniture"),
+        return List.of(TestSpec.of(house::furniture, "house.furniture"),
             TestSpec.of(house::room, "house.rooms"));
     }
 }
