@@ -1,6 +1,6 @@
 package net.datafaker.providers.base;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class MarketingTest extends BaseFakerTest<BaseFaker> {
@@ -8,7 +8,7 @@ class MarketingTest extends BaseFakerTest<BaseFaker> {
     @Override
     protected Collection<TestSpec> providerListTest() {
         Marketing marketing = faker.marketing();
-        return Arrays.asList(TestSpec.of(marketing::buzzwords, "marketing.buzzwords"));
+        return List.of(TestSpec.of(marketing::buzzwords, "marketing.buzzwords"));
     }
 
 }
