@@ -1,6 +1,6 @@
 package net.datafaker.providers.base;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class MilitaryTest extends BaseFakerTest<BaseFaker> {
@@ -8,7 +8,7 @@ class MilitaryTest extends BaseFakerTest<BaseFaker> {
     @Override
     protected Collection<TestSpec> providerListTest() {
         Military military = faker.military();
-        return Arrays.asList(TestSpec.of(military::armyRank, "military.army_rank"),
+        return List.of(TestSpec.of(military::armyRank, "military.army_rank"),
                 TestSpec.of(military::marinesRank, "military.marines_rank"),
                 TestSpec.of(military::navyRank, "military.navy_rank"),
                 TestSpec.of(military::airForceRank, "military.air_force_rank"),
