@@ -1,6 +1,6 @@
 package net.datafaker.providers.base;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class MountaineeringTest extends BaseFakerTest<BaseFaker> {
@@ -8,6 +8,6 @@ class MountaineeringTest extends BaseFakerTest<BaseFaker> {
     @Override
     protected Collection<TestSpec> providerListTest() {
         Mountaineering mountaineering = faker.mountaineering();
-        return Arrays.asList(TestSpec.of(mountaineering::mountaineer, "mountaineering.mountaineer"));
+        return List.of(TestSpec.of(mountaineering::mountaineer, "mountaineering.mountaineer"));
     }
 }
