@@ -1,6 +1,6 @@
 package net.datafaker.providers.base;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class NigeriaTest extends BaseFakerTest<BaseFaker> {
@@ -8,7 +8,7 @@ class NigeriaTest extends BaseFakerTest<BaseFaker> {
     @Override
     protected Collection<TestSpec> providerListTest() {
         Nigeria nigeria = faker.nigeria();
-        return Arrays.asList(TestSpec.of(nigeria::places, "nigeria.places"),
+        return List.of(TestSpec.of(nigeria::places, "nigeria.places"),
                 TestSpec.of(nigeria::food, "nigeria.food"),
                 TestSpec.of(nigeria::name, "nigeria.name"),
                 TestSpec.of(nigeria::schools, "nigeria.schools"),
