@@ -1,6 +1,6 @@
 package net.datafaker.providers.entertainment;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class DumbAndDumberTest extends EntertainmentFakerTest {
@@ -9,7 +9,7 @@ class DumbAndDumberTest extends EntertainmentFakerTest {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(
+        return List.of(
             TestSpec.of(dumbAndDumber::actor, "dumb_and_dumber.actors"),
             TestSpec.of(dumbAndDumber::character, "dumb_and_dumber.characters"),
             TestSpec.of(dumbAndDumber::quote, "dumb_and_dumber.quotes")
