@@ -1,6 +1,6 @@
 package net.datafaker.providers.entertainment;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 
@@ -10,7 +10,7 @@ class FinalSpaceTest extends EntertainmentFakerTest {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(
+        return List.of(
             TestSpec.of(finalSpace::character, "final_space.characters"),
             TestSpec.of(finalSpace::quote, "final_space.quotes"),
             TestSpec.of(finalSpace::vehicle, "final_space.vehicles")
