@@ -1,6 +1,6 @@
 package net.datafaker.providers.entertainment;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 /**
@@ -12,7 +12,7 @@ class LordOfTheRingsTest extends EntertainmentFakerTest {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(
+        return List.of(
             TestSpec.of(lordOfTheRings::character, "lord_of_the_rings.characters"),
             TestSpec.of(lordOfTheRings::location, "lord_of_the_rings.locations")
         );
