@@ -1,6 +1,6 @@
 package net.datafaker.providers.entertainment;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class NewGirlTest extends EntertainmentFakerTest {
@@ -9,7 +9,7 @@ class NewGirlTest extends EntertainmentFakerTest {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(
+        return List.of(
             TestSpec.of(newGirl::characters, "new_girl.characters"),
             TestSpec.of(newGirl::quotes, "new_girl.quotes")
         );
