@@ -1,6 +1,6 @@
 package net.datafaker.providers.entertainment;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class PrincessBrideTest extends EntertainmentFakerTest {
@@ -9,7 +9,7 @@ class PrincessBrideTest extends EntertainmentFakerTest {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(
+        return List.of(
             TestSpec.of(princessBride::character, "princess_bride.characters"),
             TestSpec.of(princessBride::quote, "princess_bride.quotes")
         );
