@@ -1,6 +1,6 @@
 package net.datafaker.providers.sport;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class VolleyballTest extends SportFakerTest {
@@ -9,7 +9,7 @@ class VolleyballTest extends SportFakerTest {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(
+        return List.of(
             TestSpec.of(volleyball::coach, "volleyball.coach"),
             TestSpec.of(volleyball::formation, "volleyball.formation"),
             TestSpec.of(volleyball::player, "volleyball.player"),
