@@ -14,7 +14,6 @@ import java.io.FileWriter;
 import java.io.IOException;
 import java.io.UncheckedIOException;
 import java.io.Writer;
-import java.util.Arrays;
 import java.util.Comparator;
 import java.util.HashSet;
 import java.util.Locale;
@@ -41,7 +40,7 @@ public class ProvidersDocsGenerator {
     private final Set<Class<?>> subTypes = new TreeSet<>(providersComparatorBySimpleName);
 
     // Exclude non-providers from generation
-    private final Set<String> providersToExcludeFromGeneration = new HashSet<>(Arrays.asList("CustomFakerTest", "InsectFromFile", "Insect"));
+    private final Set<String> providersToExcludeFromGeneration = Set.of("CustomFakerTest", "InsectFromFile", "Insect");
 
     private final Set<String> fakersWithoutSinceTag = new HashSet<>();
 
@@ -95,7 +94,7 @@ public class ProvidersDocsGenerator {
             Optional<CommentsCollection> commentsCollection =
                 parser.parse(file).getCommentsCollection();
 
-            if (!commentsCollection.isPresent()) {
+            if (commentsCollection.isEmpty()) {
                 fakersWithoutSinceTag.add(filePath);
                 return "";
             }
@@ -104,7 +103,7 @@ public class ProvidersDocsGenerator {
                 .stream()
                 .findFirst();
 
-            if (!javadocComments.isPresent()) {
+            if (javadocComments.isEmpty()) {
                 fakersWithoutSinceTag.add(filePath);
                 return "";
             }
@@ -275,12 +274,15 @@ public class ProvidersDocsGenerator {
 
     private enum TextBlock {
         HEADER("# Fake Data Providers\n"),
-        GROUP_DESCRIPTIONS("\n#### Provider groups:\n"
-            + "- Base (Providers of everyday data)\n"
-            + "- Entertainment (Providers for movies, shows, books)\n"
-            + "- Food (Providers for different types of food)\n"
-            + "- Sport (Providers for different types of sport)\n"
-            + "- Videogame (Video game providers)\n");
+        GROUP_DESCRIPTIONS("""
+
+            #### Provider groups:
+            - Base (Providers of everyday data)
+            - Entertainment (Providers for movies, shows, books)
+            - Food (Providers for different types of food)
+            - Sport (Providers for different types of sport)
+            - Videogame (Video game providers)
+            """);
 
         private final String text;
 
